# TradingV3

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  update_data.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  coverage.yml
config/: filters.yaml  runtime.yaml  thresholds.yaml
core/: config_util.py  events.py  timeutil.py
docs/: CI_RULECHECK.md  CI_RULECHECK_20250825_155801.md  Entwickler‑konzept – V2 Umgesetzt (final).docx  KONZEPT_ENTWICKLER.md  KONZEPT_TRADER.md  MASTERPLAN.md  Masterplan – V2 Umgesetzt (final).docx
exec/: paper.py
ilog/: csvlog.py
scripts/: aggregate_variants.py  dev.ps1  readme.txt
strategy/: exits.py  filters.py  governor.py
tests/: test_app.py  test_smoke.py
tests/app/: test_app_backtest.py  test_app_backtest_more.py  test_app_entry_divergence_block.py  test_app_entry_gates.py  test_app_entry_session_block.py  test_app_entry_short_block.py  test_app_entry_tp1_stopbe.py  test_app_exit_endofdata.py  test_app_governor_blocks.py  test_app_in_session_boundaries.py  test_app_load_symbols_parsing.py  test_app_loadbars_duplicates_msstring.py  test_app_loadbars_malformed_row.py  test_app_loadbars_missing_file.py  test_app_main_combined_write.py  test_app_main_empty_universe.py  test_app_main_exit_missing_universe.py  test_app_main_no_data.py  (+17 more)
tradingv3_alerts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+9 files in other folders)
